# swarmathon2018

./: .gitignore  .gitmodules  2EKF_0.txt  2EKF_0.txt.csv  2EKF_1.txt.csv  2EKF_3.txt.csv  2EKF_4.txt.csv  2EKF_5.txt.csv  2FILT_1.txt.csv  2FILT_5.txt.csv  2FILT_6.txt  2FILT_6.txt.csv  2FILT_7.txt.csv  2FILT_8.txt.csv  2FILT_9.txt.csv  EKF_6.txt  EKF_7.txt  EKF_7.txt.csv  EKF_9.txt.csv  FILT_1.txt.csv  FILT_10.txt.csv  FILT_2.txt.csv  FILT_3.txt.csv  FILT_4.txt.csv  FILT_9.txt.csv  nohup.out  overallFiltered.2.txt.csv  overallFiltered.txt.csv
src/behaviours/: CMakeLists.txt
src/behaviours/src/: Cube.cpp  Cube.h  DriveController.cpp  ExtendedGlobals.h  Gripper.cpp  Gripper.h  LinRotPID.cpp  LinRotPID.h  LinVelPID.cpp  LinVelPID.h  LinearPID.cpp  LinearPID.h  MotorController.cpp  MotorController.h  PID.cpp  PID.h  ROSAdapter.cpp  RadRotPID.cpp  RadRotPID.h  Tag.cpp  Tag.h  TagExaminer.cpp  TagExaminer.h  TagUtilities.cpp  TagUtilities.h  Velocity.cpp  Velocity.h  pid.txt
src/behaviours/src/StateMachine/: HighState.h  State.h  StateMachine.h  SubState.h  TimedQueueState.h  TimedQueueSubState.h
src/behaviours/src/inputs/: InputLocation.cpp  InputLocation.h  InputSonarArray.h  InputTags.h
src/behaviours/src/io_types/: InputTags.h  Validators.cpp
src/behaviours/src/logic/: Avoid.cpp  Avoid.h  AvoidCubeState.cpp  AvoidCubeState.h  AvoidHomeState.cpp  AvoidHomeState.h  AvoidState.cpp  AvoidState.h  DropOffState.cpp  DropOffState.h  FindHome.cpp  FindHome.h  FindHomeState.cpp  FindHomeState.h  InitState.cpp  InitState.h  LogicMachine.cpp  LogicMachine.h  LogicState.cpp  LogicState.h  LogicTypes.cpp  LogicTypes.h  MotorCalibState.cpp  MotorCalibState.h  ObstacleAvoidState.cpp  ObstacleAvoidState.h  OliverPickUp.cpp  OliverPickUp.h  OliverPickUpState.cpp  OliverPickUpState.h  PickUpState.cpp  PickUpState.h  RetrunState.h  ReturnState.cpp  RotationalCalibState.cpp  RotationalCalibState.h  SearchState.cpp  SearchState.h  SubMachine.cpp  SubMachine.h  (+2 more)
src/behaviours/src/messaging/: MessageManager.cpp  MessageManager.h
src/behaviours/src/tests/: MotorControllerTest.cpp
src/behaviours/src/waypoints/: ApproachCube.cpp  ApproachCube.h  ApproachHome.cpp  ApproachHome.h  ApproachTagWaypoint.cpp  ApproachTagWaypoint.h  CameraYawPID.h  (+21 more)
(+116 files in other folders)
